fix editor container overflow direction bug

--- a/src/containers/Stage-Editor/components/Editor-Stories-Kingdom/MotionEditor.scss
+++ b/src/containers/Stage-Editor/components/Editor-Stories-Kingdom/MotionEditor.scss
@@ -6,4 +6,6 @@
     height: inherit;
     text-align: center;
     background-color: black;
+    direction: rtl;
+    overflow: scroll;
 }
